fixed footer nav - design error on safari sp

--- a/public/css/_footer.scss
+++ b/public/css/_footer.scss
@@ -8,8 +8,8 @@
 }
 
 .footer-nav {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: auto auto;
     justify-content: center;
     column-gap: 15px;
     row-gap: 20px;
